--- a/FraudDetectionCpt1.ipynb
+++ b/FraudDetectionCpt1.ipynb
@@ -1158,7 +1158,7 @@
     "- As aforementioned, the numerical columns display wide ranges and gigantic skewness. So, it's imperative to perform some sort of transformations to make them more Gaussian-like. We pick the Box-Cox transformation, then use eye-balling and a wider than normally used Tukey's fences method to detect the outliers.\n",
     "- It's obvious that our 3 numerical columns are highly correlated by definition. Thus, we only need to detect and handle the outliers for the Box-Cox transformed ['creditLimit','transactionAmount','availableMoney'] columns.\n",
     "- Since we plan to work with Box-Cox transformed columns in the modeling phase, so we will be conservative in the outlier detection and cap them by the Tukey's fences method with 2 times of IQR instead of 1.5 time.\n",
-    "- As a result, 11 outliers are detected with transaction amount higher than $1680, and they are all non-fraudulent transactions. They are deleted for now.\n"
+    "- As a result, 11 outliers are detected with transaction amount higher than \\$1680, and they are all non-fraudulent transactions. They are deleted for now.\n"
    ]
   },
   {
@@ -3024,17 +3024,33 @@
    "source": [
     "## 4.1 Summary Statistics\n",
     "- The as-is dataset has 786,363 rows/transactions and 29 columns/features, including 4 numerical features, 4 datetime features and 20 categorical/boolean features.\n",
-    "- The post-preprocessed dataset has 786,352 rows/transactions and 25 columns/features, including 6 numerical features, 1 datetime features and 18 categorical/boolean features. 11 rows are dropped due to having overly large transaction amount (> $1,680) as outliers for EDA purpose. A more model-oriented feature engineering section will be discussed later. \n",
+    "- The post-preprocessed dataset has 786,352 rows/transactions and 25 columns/features, including 6 numerical features, 1 datetime features and 18 categorical/boolean features. 11 rows are dropped due to having overly large transaction amount (> \\$1,680) as outliers for EDA purpose. A more model-oriented feature engineering section will be discussed later. \n",
     "- There are 773935 legitimate/non-fraud transactions or 98.42% of the target labels.\n",
     "- There are 12,417 fraudulent transactions or 1.58% of the target labels.\n",
     "- All transactions took places from 2016-01-01 to 2016-12-30.\n",
-    "- The average transaction amount is $136.96, with a standard deviation of $147.60, and the median is $87.90. The transaction amount ranges from $0.00 to $1608.35.\n",
-    "- The average available money is $6,250.68, with a standard deviation of $8,880.69, and the median is $3,184.86. The available money ranges from $-1,005.63 to $50,000.00.\n",
-    "- The average current balance is $4,508.76, with a standard deviation of $6,457.47, and the median is $2,451.78. The current balance ranges from $0.00 to $47,498.81.\n",
-    "- The average credit utilization rate is 0.39, with a standard deviation of 0.36, and the median is 0.29.\n",
-    "- The average available money rate is 0.68, with a standard deviation of 0.17, and the median is 0.70.\n",
-    "- The average time since the account was opened is 1,013 days, with a standard deviation of 1,123 days, and the median is 684 days. The time since the account was opened ranges from 0 to 4,000 days.\n",
-    "- The average time since the last address change is 1,013 days, with a standard deviation of 1,123 days, and the median is 684 days. The time since the last address change ranges from 0 to 4,000 days.\n"
+    "- The average transaction amount is \\$136.96, with a standard deviation of \\$147.60, and the median is \\$87.90. The transaction amount ranges from \\$0.00 to \\$1608.35.\n",
+    "- The average available money is \\$6,250.68, with a standard deviation of \\$8,880.69, and the median is \\$3,184.86. The available money ranges from \\$-1,005.63 to \\$50,000.00.\n",
+    "- The average current balance is \\$4,508.76, with a standard deviation of \\$6,457.47, and the median is \\$2,451.78. The current balance ranges from $0.00 to $47,498.81.\n",
+    "- The average credit utilization rate is 0.46, with a standard deviation of 0.31, and the median is 0.47. Its range is from 0 to 4.72. \n",
+    "- The average available money rate is 0.54, with a standard deviation of 0.31, and the median is 0.53. Its range is from -3.72 to 1. \n",
+    "- The average time since the account was opened is 883.53 days, with a standard deviation of 697.50 days, and the median is 680 days. Its range is from 1 to 9,999 days.\n",
+    "- The average time since the last address change is 448.30 days, with a standard deviation of 663.70 days, and the median is 159 days. Its range is from 0 to 9,999 days.\n",
+    "- The average time left on a card to expire is 3,762.87 days, with a standard deviation of 1,446.24 days, and the median is 3767 days. Its range is from 1,095 to 6,451 days.\n",
+    "- The transaction type has 4 categories, purchase, reversal, address verification, and unknown.\n",
+    "- The POS entry mode has 6 categories, 02-magnetic stripe, 05-chip/IC read, 09-Ecommerce, 80-faulty chip/IC read fallback to stripe, 90-magnetic stripe with CVV, and unknown.\n",
+    "- The POS condition code has 4 categories, 01-cardholder not present, 08-mail/phone order, 99-no information, and unknown.\n",
+    "- The features card present, expiration date key in match count both have 2 categories, false and true.\n",
+    "- The mismatch in CVV has 4 categories, 0, 1, 2, and 3.\n",
+    "- There are 5,000 account numbers. If we assume one distinct last 4 digits correspond to 1 authorized user. Then, 1 account has 6 users, 7 accounts have 5 users, 45 account have 4 users, 369 accounts have 3 users, 1,474 accounts have 2 users and 3,104 accounts have only 1 user. If we use 'accountNumber+4digits' replace the 'accountNumber' and 'carLast4Digits', we will end with 7,380 distinct users.\n",
+    "- The credit limit has 10 categories, \\$250, \\$500, \\$1,000, \\$2,500, \\$5,000, \\$7,500, \\$10,000, \\$15,000, \\$20,000, and \\$50,000.\n",
+    "- The account acquired country and merchant country both have 4 categories, US, MEX, CAN and PR.\n",
+    "- The country mismatch has 2 categories, true and false.\n",
+    "- The merchant name has 205 categories, we might want to further group them later on.\n",
+    "- The merchant category has 19 categories, online_retail, fastfood, entertainment, food, online_gifts, rideshare, hotels, fuel, subscriptions, auto, etc.\n",
+    "- The distribution of total transaction spreads rather uniformly evenly among 24 hours of a day, whereas the count of fraudulent transactions tend to have a peak around 3 p.m.\n",
+    "- The distribution of total transaction spreads rather uniformly evenly among the 31 days of a month, except for some months don't have 31 or 30. The count of fraudulent transactions also tend to be smooth, except for a very shallow dip around 18th of each month.\n",
+    "- The distribution of total transaction spreads rather uniformly evenly among the 7 days of a week, with only Friday standing out. On top of that, the count of fraudulent transactions also tend to have a prominent peak on Friday, ensued by a huge dig on the weekends.\n",
+    "- The distribution of total monthly counts of transaction is not uniform. It is very clear that the first six months are lower in the counts, whereas the count from July to December are much higher on average. On the contrary, the fraud rates are higher in the fist half of the year. On top of that, the count of fraudulent monthly transactions tend to show a prominent valley in November."
    ]
   },
   {
@@ -6544,24 +6560,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c33a97d4",
-   "metadata": {},
-   "source": [
-    "# 5. Feature Engineering\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94bb0209",
+   "id": "c33a97d4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Based on the preprocessing and exploratory data analysis, we can summarize the following findings:\n",
-    "- The dataset contains 5000 account numbers, and each account number has multiple transact"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
