--- a/FraudDetectionCpt1.ipynb
+++ b/FraudDetectionCpt1.ipynb
@@ -6560,12 +6560,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "c33a97d4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 5. Feature Engineering\n",
+    "\n",
+    "## 5.1 Feature engineering that has already been conducted\n",
+    "Based on the preprocessing and exploratory data analysis, we have already conducted some feature engineering, for example:\n",
+    "- Drop the six all NaN columns ['echoBuffer', 'merchantCity', 'merchantState', 'merchantZip', 'posOnPremises', 'recurringAuthInd'],\n",
+    "- Drop the redundant ['customerId'] column,\n",
+    "- Extract the day, month, year of the transactions and convert the ['accountOpenDate', 'dateOfLastAddressChange','currentExpDate'] to numeric features as ['t_since_open', 't_since_update_add', 't_2_exp'],\n",
+    "- Coalesce the information contained in ['cardCVV', 'enteredCVV'] columns to a new categorical ['mismatchInCVV'] column showing the number of mismatches by comparing the 3 integers in each row of the two CVV columns,\n",
+    "- Truncate the ['merchantName'] starting from the first #, reducing the number of merchants from 2489 to 205,\n",
+    "- Replace ['currentBalance','availableMoney'] to ['creditUtilizationRate', 'availableMoneyRate'] to reflect the 'creditLimit',\n",
+    "- Normalize the numeric features ['transactionAmount', 't_since_open', 't_since_update_add', 't_2_exp'],\n",
+    "- Combined the ['accountNumber', 'cardLast4Digits'] as ['accountNumber+4Digits']. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22ea5ea2",
+   "metadata": {},
+   "source": [
+    "## 5.2 Feature engineering to be executed "
+   ]
   },
   {
    "cell_type": "markdown",
