start the aggregate

--- a/FraudDetectionCpt1.ipynb
+++ b/FraudDetectionCpt1.ipynb
@@ -6584,10 +6584,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e678c481",
+   "metadata": {},
+   "source": [
+    "## 5.2 Feature Engineering to be executed as follows:\n",
+    "\n",
+    "- ordinal encode the ['creditLimit', ] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "22ea5ea2",
    "metadata": {},
    "source": [
-    "## 5.2 Feature engineering to be executed, historical aggregates\n",
+    "## 5.3 Feature engineering to be executed, historical aggregates\n",
     "\n",
     "In a ast and peer experience suggests that "
    ]
