roadmap for split and weighting

--- a/FraudDetectionCpt1.ipynb
+++ b/FraudDetectionCpt1.ipynb
@@ -6787,26 +6787,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 154,
+   "cell_type": "markdown",
    "id": "a17bb3b3",
+   "metadata": {},
+   "source": [
+    "# 6. Data Split by time \n",
+    "\n",
+    "Split the data into train, validation, and test sets via stratified random sampling while keeping the ratio of the target column 'isFraud' the same in each set.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7b67675",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6. Split the data into train, validation, and test sets by stratified random sampling while keeping the ratio of the target column 'isFraud' the same in each set.\n",
     "\n",
-    "df = joblib.load('data_after_agg.pkl')\n",
-    "base_features = joblib.load('base_features.pkl')\n",
-    "agg_features = joblib.load('agg_features.pkl')\n",
-    "\n",
-    "# split the data into train, validation, and test sets by stratified random sampling\n",
-    "X = df.drop(columns='isFraud', inplace=False)\n",
-    "y = df['isFraud']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.25, random_state=42, stratify=y_train)\n",
-    "print(f'The train set has {X_train.shape[0]:,} rows and {X_train.shape[1]} features.')\n",
-    "print(f'The validation set has {X_val.shape[0]:,} rows and {X_val.shape[1]} features.')\n",
-    "print(f'The test set has {X_test.shape[0]:,} rows and {X_test.shape[1]} features.')\n"
+    "# df = joblib.load('data_after_agg.pkl')\n",
+    "# base_features = joblib.load('base_features.pkl')\n",
+    "# agg_features = joblib.load('agg_features.pkl')\n",
+    "\n"
    ]
   },
   {
@@ -6818,12 +6819,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "ca2d1f0537969b6e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "split test as the latest 10% transactions by time, check the unique UID left\n",
+    "the first part (naming) use stratified shuffle split to get train and validation\n",
+    "Train a model with class weighting, and this only takes place during training."
+   ]
   },
   {
    "cell_type": "code",
