--- a/FraudDetectionCpt1.ipynb
+++ b/FraudDetectionCpt1.ipynb
@@ -6934,6 +6934,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 514,
+   "id": "199ac030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fea = 'merchantName'\n",
+    "# save the result of the value_counts() of the 'merchantName' column to a .csv file\n",
+    "df[fea].value_counts().to_csv(f'{fea}_value_counts.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 495,
    "id": "3d9da5d7",
    "metadata": {},
